<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resumen_asiento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SeatSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/resumenReserva"
            android:textColor="@color/amarillo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="left"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/amarillo"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_pelicula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/pelicula"
            android:textColorHint="@color/amarillo"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pelicula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/asiento"
            android:textColorHint="@color/amarillo"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/num_asiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/nombre"
            android:textColorHint="@color/amarillo"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:inputType="text"
            android:background="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/tipoPago"
            android:textColorHint="@color/amarillo"
            android:layout_gravity="center"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/tipoPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <RadioButton
                android:id="@+id/efectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Efectivo"
                android:textAlignment="center"
                android:textColor="@color/amarillo"
                android:layout_marginHorizontal="3dp"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarjeta"
                android:textAlignment="center"
                android:textColor="@color/amarillo"
                android:layout_marginHorizontal="3dp"
                android:textSize="15sp" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/reservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:textColor="@color/black"
        android:text="Reservar"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="70dp" />

</LinearLayout>